--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+.main-grid {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  margin: 1rem 0;
+  border-radius: 10px;
+  overflow: hidden;
+  /* border: 1px solid red; */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background-color: rgba(207, 225, 240, 0.5);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.expression-side-container {
+  /* border: 1px solid green; */
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
+  background-color: white;
+}
+.element-main-container {
+  /* border: 1px solid blue; */
+  width: 100%;
+  /* height: 100%; */
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 2rem;
+  padding: 2rem;
+
+}
+
+.add-btn-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-left: 5px;
+}
+.add-btn-wrapper button,
+.add-icon {
+  background-color: transparent;
+  border: none;
+  color: rgb(4, 156, 244);
+  font-weight: 600;
+}
+.output-node-btn-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+
+}
+.output-node-btn{
+  background-color: rgb(3, 94, 220);
+  border-radius: 1rem;
+  padding: .5rem 1rem;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
